--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <a id="save" href="#" download>save</a>
+    <a href="clear()">clear</a>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.4.4/phaser.min.js"></script>
     <script src="script.js"></script>
 </body>
