Use assets, wire-up clear function, style

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <a id="save" href="#" download>save</a>
-    <a href="clear()">clear</a>
+    <div id="container"></div>
+    <a id="save" href="#" download><img src="save.png"></a>
+    <div id="clear" onclick="clear_notes()"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.4.4/phaser.min.js"></script>
     <script src="script.js"></script>
 </body>
